chore: Cập nhật cấu hình dự án và loại bỏ mã không cần thiết
- Cập nhật phiên bản Spring Boot từ 3.4.2 lên 3.4.6 trong pom.xml.
- Thay đổi tên nhóm và tên dự án trong pom.xml để phản ánh đúng nội dung.
- Thêm cấu hình bảo mật với SecurityConfig.java để quản lý quyền truy cập.
- Tạo mới các lớp Entity và Mapper cho các thực thể liên quan đến Change Template.
- Cập nhật các phương thức trong ChangeTemplateService để loại bỏ các tham số không cần thiết.
- Loại bỏ ServletInitializer.java và các lớp kiểm thử không cần thiết.
- Cải thiện cấu trúc bảng trong init.sql và cập nhật các thuộc tính trong application.properties.

Chưa hoàn thành: Cần kiểm tra và tối ưu hóa các chức năng bảo mật và các lớp Entity mới nếu cần thiết.